--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400&display=swap");
+
 @import "./constants/sizes";
 @import "./constants/paddings";
 
@@ -15,8 +17,11 @@
 	}
 
 	@media screen and (min-width: $desktop) {
-		max-width: none;
-		min-width: $desktop;
+		max-width: $desktop;
 		padding: 0 $desktopPadding;
 	}
+}
+
+main {
+	padding-top: 112px;
 }
