--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,20 @@
 .header {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 10;
+
+	background-color: #fff;
 }
 
 .headerBody {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+
+	padding: 36px 0 36px 0;
+	min-height: 112px;
 }
 
 .headerLogoLink {
