--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,12 @@ h2,
 h3,
 h4,
 p {
-	margin-top: 0;
-	margin-bottom: 0;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
 
 ul {
