ADDED: burger-menu with links

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,10 @@
 @import "./constants/sizes";
 @import "./constants/paddings";
 
+body._lock {
+	overflow: hidden;
+}
+
 .container {
 	margin: 0 auto;
 	padding: 0 $mobilePadding;
@@ -20,8 +24,4 @@
 		max-width: $desktop;
 		padding: 0 $desktopPadding;
 	}
-}
-
-main {
-	padding-top: 112px;
 }
