--- a/src/components/BurgerMenu/BurgerMenu.module.scss
+++ b/src/components/BurgerMenu/BurgerMenu.module.scss
@@ -1,3 +1,5 @@
+@import "constants/sizes";
+
 .headerMenu {
 }
 
@@ -29,13 +31,29 @@
 	width: 100%;
 	height: 100%;
 	padding-top: 36px;
+	padding-bottom: 36px;
 
 	transform: scaleY(0%);
 	transform-origin: top;
-	transition: all 0.3s ease;
+	transition: transform 0.3s ease;
+	// pointer-events: none;
+
+	@media screen and (min-width: $tablet) {
+		// min-width: 100%;
+		// display: flex;
+		// flex-direction: row-reverse;
+
+		background-color: rgba(23, 61, 51, 0.25);
+		backdrop-filter: blur(2px);
+
+		// opacity: 0;
+		// transition: opacity 0.3s ease;
+	}
 }
 
 .menuBodyActive {
+	// opacity: 1;
+	// pointer-events: all;
 	transform: scaleY(100%);
 }
 
@@ -51,6 +69,18 @@
 	backdrop-filter: blur(12.5px);
 
 	overflow: auto;
+
+	// transform: scaleY(0%);
+	// transform-origin: top;
+	// transition: transform 0.3s ease;
+
+	@media screen and (min-width: $tablet) {
+		width: 365px;
+	}
+}
+
+.menuBoxActive {
+	transform: scaleY(100%);
 }
 
 .closeBtn {
@@ -106,6 +136,8 @@
 	font-family: Fira Sans;
 	font-size: 24px;
 	letter-spacing: -0.96px;
+
+	cursor: pointer;
 
 	&:hover,
 	&:focus {
