--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,3 +1,5 @@
+@import "constants/sizes";
+
 .header {
 	position: fixed;
 	top: 0;
@@ -21,4 +23,48 @@
 }
 
 .logo {
+}
+
+.menuWrapper {
+	display: flex;
+	align-items: center;
+	gap: 12px;
+}
+
+.getInTouch {
+	display: none;
+
+	padding: 10px 16px;
+
+	border-radius: 500px;
+	background-color: #97d28b;
+
+	color: #173d33;
+	font-family: Fira Sans;
+	letter-spacing: -0.64px;
+
+	cursor: pointer;
+
+	&::after {
+		content: "";
+		width: 14px;
+		height: 14px;
+		border-radius: 50%;
+		background-color: #173d33;
+	}
+
+	&:hover,
+	&:focus {
+		color: #fff;
+
+		&::after {
+			background-color: #fff;
+		}
+	}
+
+	@media screen and (min-width: $tablet) {
+		display: flex;
+		align-items: center;
+		gap: 12px;
+	}
 }
