--- a/src/components/BurgerMenu/BurgerMenu.module.scss
+++ b/src/components/BurgerMenu/BurgerMenu.module.scss
@@ -28,33 +28,42 @@
 	position: fixed;
 	top: 0;
 	left: 0;
+	right: 0;
+
 	width: 100%;
 	height: 100%;
-	padding-top: 36px;
-	padding-bottom: 36px;
+	padding: 36px 0;
 
-	transform: scaleY(0%);
-	transform-origin: top;
-	transition: transform 0.3s ease;
-	// pointer-events: none;
+	// opacity: 0;
+	pointer-events: none;
+	transition: opacity 0.3s ease;
 
 	@media screen and (min-width: $tablet) {
-		// min-width: 100%;
-		// display: flex;
-		// flex-direction: row-reverse;
-
 		background-color: rgba(23, 61, 51, 0.25);
 		backdrop-filter: blur(2px);
 
-		// opacity: 0;
-		// transition: opacity 0.3s ease;
+		opacity: 0;
+		transition: opacity 0.3s ease;
 	}
 }
 
 .menuBodyActive {
-	// opacity: 1;
-	// pointer-events: all;
-	transform: scaleY(100%);
+	opacity: 1;
+	pointer-events: all;
+}
+
+.menuContainer {
+	height: 100%;
+
+	@media screen and (min-width: $tablet) {
+		display: flex;
+		flex-direction: row-reverse;
+		width: $tablet;
+	}
+
+	@media screen and (min-width: $desktop) {
+		width: $desktop;
+	}
 }
 
 .menuBox {
@@ -70,9 +79,9 @@
 
 	overflow: auto;
 
-	// transform: scaleY(0%);
-	// transform-origin: top;
-	// transition: transform 0.3s ease;
+	transform: scaleY(0%);
+	transform-origin: top;
+	transition: transform 0.3s ease;
 
 	@media screen and (min-width: $tablet) {
 		width: 365px;
