--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -15,8 +15,12 @@
 	align-items: center;
 	justify-content: space-between;
 
-	padding: 36px 0 36px 0;
+	padding: 36px 0;
 	min-height: 112px;
+
+	@media screen and (min-width: $tablet) {
+		padding: 24px 0;
+	}
 }
 
 .headerLogoLink {
