ADDED: mobile styles of main section

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,8 @@
+// Fira Sans font
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400&display=swap");
+
+// Oswald font
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap");
 
 @import "./constants/sizes";
 @import "./constants/paddings";
