--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,9 +1,118 @@
+@import "constants/sizes";
+
 .main {
 	padding-top: 110px;
+	padding-bottom: 18px;
+}
+
+.mainTopWrapper {
+	margin-bottom: 24px;
+	&::after {
+		content: "";
+		display: block;
+		height: 1px;
+		background-color: #97d28b;
+	}
 }
 
 .mainTitle {
+	margin-bottom: 24px;
+
+	color: #173d33;
+	font-family: Oswald;
+	font-size: 36px;
+	line-height: 1;
+	text-transform: uppercase;
 }
 
 .mainPreTitle {
+	margin-bottom: 24px;
+
+	color: #173d33;
+	font-family: Fira Sans;
+	letter-spacing: -0.64px;
+	text-align: justify;
+}
+
+.mainBtnWrapper {
+	display: flex;
+	justify-content: center;
+}
+
+.learnMoreBtn {
+	display: flex;
+	align-items: center;
+	gap: 12px;
+	height: 40px;
+	margin-bottom: 24px;
+
+	padding: 4px 4px 4px 16px;
+
+	border-radius: 500px;
+	border: 1px solid #97d28b;
+
+	font-size: 16px;
+	color: #173d33;
+	font-family: Fira Sans;
+	line-height: calc(18px / 16px);
+	letter-spacing: -0.64px;
+
+	cursor: pointer;
+
+	&:hover,
+	&:focus {
+		color: #fff;
+		background-color: #97d28b;
+	}
+}
+
+.mainArrowWrapper {
+	display: flex;
+	align-items: center;
+	padding: 8px;
+
+	border-radius: 100px;
+	background-color: #97d28b;
+}
+
+.mainArrowIcon {
+	stroke: currentColor;
+}
+
+.mainBottomWrapper {
+}
+
+.addressWrapper {
+	margin-bottom: 36px;
+
+	color: #173d33;
+	font-family: Fira Sans;
+	font-size: 16px;
+	letter-spacing: -0.64px;
+}
+
+.physAddress {
+	display: block;
+	margin-bottom: 8px;
+	text-align: center;
+}
+
+.mailAddress {
+	display: block;
+	text-align: center;
+}
+
+.mainCopy {
+	display: none;
+
+	@media screen and (min-width: $tablet) {
+		display: inline-block;
+	}
+}
+
+.windTurbineImg {
+	display: block;
+	width: 319px;
+	height: 200px;
+	margin: 0 auto;
 }
