ADDED: function of change bg on header

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,6 +8,11 @@
 	z-index: 10;
 
 	background-color: #fff;
+	transition: background-color 0.3s ease;
+
+	&.scrolled {
+		background-color: #dcefd8;
+	}
 }
 
 .headerBody {
