--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ html {
 *,
 *:before,
 *:after {
-	box-sizing: inherit;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
@@ -26,6 +27,8 @@ h1,
 h2,
 h3,
 h4,
+h5,
+h6,
 p {
 	margin: 0;
 	padding: 0;
@@ -47,9 +50,17 @@ ol {
 	margin: 0;
 }
 
-a {
+a,
+a:visited,
+a:hover {
 	text-decoration: none;
-	color: inherit;
+}
+
+nav,
+footer,
+header,
+aside {
+	display: block;
 }
 
 button {
@@ -60,4 +71,29 @@ button {
 	background-color: inherit;
 	box-shadow: none;
 	cursor: pointer;
+}
+
+input,
+button,
+textarea {
+	font-family: inherit;
+}
+
+input::-ms-clear {
+	display: none;
+}
+
+button::-moz-focus-inner {
+	padding: 0;
+	border: 0;
+}
+
+ul li {
+	list-style: none;
+}
+
+img {
+	vertical-align: top;
+	max-width: 100%;
+	height: auto;
 }
