ADDED: mobile versoin slider

--- a/src/components/Cases/Cases.module.scss
+++ b/src/components/Cases/Cases.module.scss
@@ -17,6 +17,9 @@
 }
 
 .casesTitle {
+	margin-bottom: 24px;
+
+	text-align: center;
 	color: #173d33;
 	font-family: Oswald;
 	font-size: 28px;
@@ -27,7 +30,8 @@
 .casesNavigateWrapper {
 	display: flex;
 	gap: 104px;
-	align-items: end;
+	justify-content: center;
+	align-items: flex-end;
 }
 
 .counterOfSlides {
@@ -38,8 +42,7 @@
 	font-weight: 300;
 	letter-spacing: -1.12px;
 }
-
-.allCountOfSlides {
+.counterOfSlides > span {
 	color: rgba(23, 61, 51, 0.25);
 }
 
@@ -63,7 +66,7 @@
 .rightArrowIcon {
 }
 
-.slider {
+.sliderWrapper {
 }
 
 // ! ------------------------------------------
