--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -213,14 +213,12 @@
 
 .windTurbineImg {
 	display: block;
-	max-width: 319px;
+	max-width: 100%;
+	object-fit: cover;
 	height: 200px;
-	margin: 0 auto;
 
 	@media screen and (min-width: $tablet) {
-		max-width: 100%;
 		height: 348px;
-		margin: 0;
 	}
 
 	@media screen and (min-width: $desktop) {
