--- a/src/components/ContactUs/ContactUs.module.scss
+++ b/src/components/ContactUs/ContactUs.module.scss
@@ -21,6 +21,29 @@
 	font-size: 28px;
 	line-height: 1;
 	text-transform: uppercase;
+
+	@media screen and (min-width: $tablet) {
+		margin-bottom: 40px;
+
+		font-size: 36px;
+	}
+
+	@media screen and (min-width: $desktop) {
+		margin-bottom: 120px;
+
+		font-size: 48px;
+	}
+}
+
+.contactUsContentWrapper {
+	@media screen and (min-width: $tablet) {
+		display: flex;
+		justify-content: space-between;
+	}
+
+	@media screen and (min-width: $desktop) {
+		gap: 178px;
+	}
 }
 
 .contactSocialList {
@@ -28,6 +51,15 @@
 	display: flex;
 	flex-direction: column;
 	gap: 24px;
+
+	@media screen and (min-width: $tablet) {
+		margin-bottom: 0;
+		max-width: 244px;
+	}
+
+	@media screen and (min-width: $desktop) {
+		max-width: 466px;
+	}
 }
 
 .contactSocialItem {
@@ -41,6 +73,10 @@
 	font-family: Fira Sans;
 	font-size: 16px;
 	letter-spacing: -0.64px;
+
+	@media screen and (min-width: $desktop) {
+		margin-bottom: 16px;
+	}
 }
 
 .contactLink {
@@ -57,6 +93,11 @@
 	&:hover,
 	&:focus {
 		color: #97d28b;
+	}
+
+	@media screen and (min-width: $desktop) {
+		font-size: 24px;
+		letter-spacing: -0.96px;
 	}
 }
 
@@ -78,6 +119,10 @@
 	&:hover,
 	&:focus {
 		color: #97d28b;
+	}
+
+	@media screen and (min-width: $desktop) {
+		padding: 0;
 	}
 }
 
