--- a/src/components/ContactUs/ContactUsForm/ContactUsForm.module.scss
+++ b/src/components/ContactUs/ContactUsForm/ContactUsForm.module.scss
@@ -6,6 +6,16 @@
 	padding: 36px 12px;
 
 	background-color: #eaedf1;
+
+	@media screen and (min-width: $tablet) {
+		width: 342px;
+		padding: 36px 24px;
+	}
+
+	@media screen and (min-width: $desktop) {
+		width: 596px;
+		padding: 48px;
+	}
 }
 
 .contactLabelsWrapper {
@@ -13,6 +23,10 @@
 	display: flex;
 	flex-direction: column;
 	gap: 28px;
+
+	@media screen and (min-width: $desktop) {
+		margin-bottom: 32px;
+	}
 }
 
 .contactFormLabel {
@@ -26,6 +40,10 @@
 	font-family: Fira Sans;
 	font-size: 16px;
 	letter-spacing: -0.64px;
+
+	@media screen and (min-width: $desktop) {
+		margin-bottom: 12px;
+	}
 }
 
 .contactFormInput {
@@ -38,6 +56,11 @@
 	font-family: Fira Sans;
 	font-size: 18px;
 	letter-spacing: -0.72px;
+
+	@media screen and (min-width: $desktop) {
+		font-size: 20px;
+		letter-spacing: -0.8px;
+	}
 }
 
 .contactFormError {
@@ -55,6 +78,11 @@
 	font-size: 18px;
 	letter-spacing: -0.72px;
 	resize: none;
+
+	@media screen and (min-width: $desktop) {
+		font-size: 20px;
+		letter-spacing: -0.8px;
+	}
 }
 
 .contactFormSubmit {
