FIXED: centered img in main section

--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -211,6 +211,11 @@
 	}
 }
 
+.mainImgWrapper {
+	display: flex;
+	justify-content: center;
+}
+
 .windTurbineImg {
 	display: block;
 	max-width: 100%;
