ADDED: disable effect on form btn

--- a/src/components/ContactUs/ContactUsForm/ContactUsForm.module.scss
+++ b/src/components/ContactUs/ContactUsForm/ContactUsForm.module.scss
@@ -108,6 +108,18 @@
 	}
 }
 
+.contactFormSubmit.disabled {
+	opacity: 0.5;
+
+	&:hover,
+	&:focus {
+		color: #173d33;
+		background-color: transparent;
+	}
+
+	cursor: default;
+}
+
 .contactSubmitIconWrapper {
 	display: flex;
 	align-items: center;
