CHANGED: styles  of hover, error

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,10 @@ body._lock {
 	overflow: hidden;
 }
 
+.facebook-fill-path {
+	fill: currentColor;
+}
+
 .container {
 	margin: 0 auto;
 	padding: 0 $mobilePadding;
