--- a/src/components/Electricity/Electricity.module.scss
+++ b/src/components/Electricity/Electricity.module.scss
@@ -3,6 +3,8 @@
 .electricity {
 	padding: 18px 0;
 
+	background-color: #f3f5fa;
+
 	@media screen and (min-width: $tablet) {
 		padding: 50px 0;
 	}
