--- a/src/components/ContactUs/ContactUs.module.scss
+++ b/src/components/ContactUs/ContactUs.module.scss
@@ -3,6 +3,8 @@
 .contactUs {
 	padding: 18px 0;
 
+	background-color: #f3f5fa;
+
 	@media screen and (min-width: $tablet) {
 		padding: 50px 0;
 	}
@@ -101,6 +103,10 @@
 	}
 }
 
+.contactLink span {
+	color: #173d33;
+}
+
 .iconWrapper {
 	display: flex;
 	align-items: center;
@@ -124,6 +130,10 @@
 	@media screen and (min-width: $desktop) {
 		padding: 0;
 	}
+}
+
+.contactLinkIcon {
+	stroke: currentColor;
 }
 
 .contactSocialIcon {
