--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -4,6 +4,8 @@
 	padding-top: 18px;
 	padding-bottom: 24px;
 
+	background-color: #f3f5fa;
+
 	@media screen and (min-width: $tablet) {
 		padding-top: 50px;
 		padding-bottom: 40px;
@@ -70,7 +72,8 @@
 
 	&:hover,
 	&:focus {
-		color: #dcefd8;
+		color: #97d28b;
+		background-color: #173d33;
 	}
 
 	@media screen and (min-width: $tablet) {
