--- a/src/components/ContactUs/ContactUsForm/ContactUsForm.module.scss
+++ b/src/components/ContactUs/ContactUsForm/ContactUsForm.module.scss
@@ -68,8 +68,13 @@
 }
 
 .contactFormError {
+	margin-top: 8px;
 	text-align: end;
 	color: #d28b8b;
+
+	@media screen and (min-width: $desktop) {
+		margin-top: 12px;
+	}
 }
 
 .contactFormText {
@@ -121,6 +126,7 @@
 	&:focus {
 		color: #173d33;
 		background-color: transparent;
+		border-color: #97d28b;
 	}
 
 	cursor: default;
