--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -43,7 +43,7 @@
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr;
 		grid-template-rows: 1fr;
-		gap: 97px;
+		gap: 84px;
 	}
 
 	@media screen and (min-width: $desktop) {
@@ -54,9 +54,38 @@
 }
 
 .footerLogoLink {
+	display: flex;
+	align-items: center;
+	gap: 4px;
+
+	color: #173d33;
+
+	&:hover,
+	&:focus {
+		color: #97d28b;
+	}
 }
 
 .logo {
+}
+
+.logoTitle {
+	font-family: "All Round Gothic Thick";
+	color: currentColor;
+	font-size: 33px;
+	letter-spacing: -1.32px;
+}
+
+.logoPreTitle {
+	font-family: "CA Saygon Text";
+	color: #173d33;
+	font-size: 10px;
+	line-height: 9px;
+	letter-spacing: -0.4px;
+}
+
+.greenLogoPreTitle {
+	color: #97d28b;
 }
 
 .footerUp {
@@ -120,9 +149,9 @@
 
 	@media screen and (min-width: $tablet) {
 		display: grid;
-		grid-template-columns: 1fr 1fr 1fr;
+		grid-template-columns: 289px 1fr 1fr;
 		grid-template-rows: 1fr;
-		gap: 97px;
+		gap: 64px;
 	}
 
 	@media screen and (min-width: $desktop) {
@@ -151,7 +180,6 @@
 }
 
 .footerLink {
-	text-align: center;
 	color: #173d33;
 	font-family: Fira Sans;
 	font-size: 16px;
@@ -171,6 +199,7 @@
 	letter-spacing: -0.64px;
 
 	@media screen and (min-width: $tablet) {
+		display: inline-block;
 		text-align: end;
 	}
 }
