FIXED: styles of main section

--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -185,7 +185,8 @@
 	}
 
 	@media screen and (min-width: $desktop) {
-		margin-right: 492px;
+		width: 289px;
+		margin-right: 430px;
 	}
 }
 
@@ -199,7 +200,7 @@
 	}
 
 	@media screen and (min-width: $desktop) {
-		margin-right: 167px;
+		margin-right: 70px;
 	}
 }
 
