--- a/src/components/FAQ/FAQ.scss
+++ b/src/components/FAQ/FAQ.scss
@@ -199,6 +199,10 @@
 
 	cursor: pointer;
 
+	transition:
+		color 250ms ease,
+		background-color 250ms ease;
+
 	&:hover,
 	&:focus {
 		color: #97d28b;
