--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -127,6 +127,11 @@
 
 	cursor: pointer;
 
+	transition:
+		color 250ms ease,
+		background-color 250ms ease,
+		border-color 250ms ease;
+
 	&:hover,
 	&:focus {
 		color: #97d28b;
