--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -35,6 +35,8 @@
 
 	color: #173d33;
 
+	transition: color 250ms ease;
+
 	&:hover,
 	&:focus {
 		color: #97d28b;
@@ -82,6 +84,10 @@
 	letter-spacing: -0.64px;
 
 	cursor: pointer;
+
+	transition:
+		color 250ms ease,
+		background-color 250ms ease;
 
 	&:hover,
 	&:focus {
