CHANGED: sizes of desktop version of site; FIXED: about list in about section

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -87,7 +87,7 @@
 		grid-template-rows: 1fr 1fr;
 	}
 
-	@media screen and (min-width: $tablet) {
+	@media screen and (min-width: $desktop) {
 		gap: 48px;
 	}
 }
