CHANGED: height of open burger menu

--- a/src/components/BurgerMenu/BurgerMenu.module.scss
+++ b/src/components/BurgerMenu/BurgerMenu.module.scss
@@ -80,6 +80,11 @@
 
 	@media screen and (min-width: $tablet) {
 		width: 365px;
+		max-height: 701px;
+	}
+
+	@media screen and (min-width: $desktop) {
+		max-height: 873px;
 	}
 }
 
